--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-"Metropolitan Museum of Art"
-"Museum of Modern Art"
-"Guggenheim Museum"
-"Whitney Museum of American Art"
+Metropolitan Museum of Art
+Museum of Modern Art
+Guggenheim Museum
+Whitney Museum of American Art
