Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-Metropolitan Museum of Art
-Museum of Modern Art
-Guggenheim Museum
-Whitney Museum of American Art
+<li>"Metropolitan Museum of Art"<li>
+<li>"Museum of Modern Art"<li>
+<li>"Guggenheim Museum"<li>
+<li>"Whitney Museum of American Art"<li>
