--- a/my_list.html
+++ b/my_list.html
@@ -1,8 +1,8 @@
 <p>New York City Museums</p>
 
 <ul>
-  <li>"Metropolitan Museum of Art"</li>
-  <li>"Museum of Modern Art"</li>
-  <li>"Guggenheim Museum"</li>
-  <li>"Whitney Museum of American Art"</li>
+  <li>Metropolitan Museum of Art</li>
+  <li>Museum of Modern Art</li>
+  <li>Guggenheim Museum</li>
+  <li>Whitney Museum of American Art</li>
 </ul>
